--- a/MvcCoreEFProcedures/appsettings.json
+++ b/MvcCoreEFProcedures/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "cadenalocalhospital": "Data Source=LOCALHOST\\SQLEXPRESS;Initial Catalog=Hospital;Persist Security Info=True;User ID=SA;Password=MCSD2021"
+    "cadenalocalhospital": "Data Source=LOCALHOST\\SQLEXPRESS;Initial Catalog=Hospital;Persist Security Info=True;User ID=SA;Password=MCSD2021",
+    "cadenalocalhospitaltajamar": "Data Source=LOCALHOST;Initial Catalog=HOSPITAL;Persist Security Info=True;User ID=SA;Password=MCSD2021"
   }
 }
